lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-lab3
spec:
  type: NodePort
  selector:
    app: lab3
  ports:
    - port: 3000
      protocol: TCP
      name: http
